adding target _blank [digital lab changes]

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -186,10 +186,10 @@ block content
 								span Webchat
 								p See what it’s like to provide and receive advice online
 								.col-xs-3
-									a.case-btn(href="http://citaone.logo-net.co.uk/chat18/") As an adviser
+									a.case-btn(href="http://citaone.logo-net.co.uk/chat18/",target="_blank") As an adviser
 
 								.col-xs-3
-									a.case-btn(href="https://www.citizensadvice.org.uk/development/web-chat-service/") As an client
+									a.case-btn(href="https://www.citizensadvice.org.uk/development/web-chat-service/",target="_blank") As an client
 								
 
 		#overlay--2.overlay(style="display: none;")
@@ -204,7 +204,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Casebook
 								p Try out Casebook, our new system for recording the support we give to clients
-								a.case-btn(href="https://webworker.casebook.demo.devops.citizensadvice.org.uk/") Try out Casebook
+								a.case-btn(href="https://webworker.casebook.demo.devops.citizensadvice.org.uk/",target="_blank") Try out Casebook
 
 		#overlay--3.overlay(style="display: none;")
 			.overlay__modal
@@ -218,7 +218,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Facebook Workplace
 								p Connect with people from across the organisation and share knowledge on Citizens Advice’s private Workplace
-								a.case-btn(href="https://citizensadvice.facebook.com") Try out Facebook Workplace
+								a.case-btn(href="https://citizensadvice.facebook.com",target="_blank") Try out Facebook Workplace
 
 		#overlay--4.overlay(style="display: none;")
 			.overlay__modal
@@ -232,7 +232,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Local impact report template
 								p Create your own local impact report from our branded templates
-								a.case-btn(href="http://citizensadvice.prinkk.com") Create your impact report
+								a.case-btn(href="http://citizensadvice.prinkk.com",target="_blank") Create your impact report
 		
 		#overlay--5.overlay(style="display: none;")
 			.overlay__modal
@@ -246,7 +246,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Priority services register tool
 								p Try out our tool that helps clients register for priority services with their energy supplier
-								a.case-btn(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/get-help-paying-your-bills/getting-extra-support-from-your-energy-supplier/") Try the priority services register tool
+								a.case-btn(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/get-help-paying-your-bills/getting-extra-support-from-your-energy-supplier/", target="_blank") Try the priority services register tool
 
 		#overlay--6.overlay(style="display: none;")
 			.overlay__modal
@@ -260,7 +260,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Improving our website
 								p Help us test if different categories in our website menu could make it easier to find the right advice
-								a.case-btn(href="https://3c6o6lhi.optimalworkshop.com/treejack/ca-treejack") Improve our website
+								a.case-btn(href="https://3c6o6lhi.optimalworkshop.com/treejack/ca-treejack", target="_blank") Improve our website
 
 		#overlay--7.overlay(style="display: none;")
 			.overlay__modal
@@ -271,11 +271,15 @@ block content
 							span.dialog__close-text Close
 					.flex-container
 						.flex-row
-							.dl--segment.col-xs-12.casebook-container
+							.dl--segment.col-xs-12.advice.web-container
 								span Universal Credit digital resources
-								p Test our new space that brings together all of the resources you need to give advice on Universal Credit
-								a.case-btn(href="#") First look at new Universal Credit resources
-									
+								p Try out two early draft designs for a new Universal Credit resource. These are a long way from finished, but we're aiming to bring together all the information advisers need in one place
+								.col-xs-3
+									a.case-btn(href="https://preview.uxpin.com/ac5495f97820ad2ac2dedb674b436d335fac5e73#/pages/76561523/simulate/no-panels?mode=i",target="_blank") Design 1
+
+								.col-xs-3
+									a.case-btn(href="https://projects.invisionapp.com/d/main#/console/12505169/263157318/preview",target="_blank") Design 2
+								
 							
 
 		.fullwidth
