updating links [digital lab]

--- a/libs/jade/dev/digital-labs/index.jade
+++ b/libs/jade/dev/digital-labs/index.jade
@@ -246,7 +246,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Priority services register tool
 								p Try out our tool that helps clients register for priority services with their energy supplier
-								a.case-btn(href="https://www.citizensadvice.org.uk/consumer/energy/energy-supply/get-help-paying-your-bills/getting-extra-support-from-your-energy-supplier/", target="_blank") Try the priority services register tool
+								a.case-btn(href="https://preview.uxpin.com/47b38497e8153b65fe9735117c6f3c07de9076ad#/pages/73478709/simulate/no-panels?mode=i", target="_blank") Try the priority services register tool
 
 		#overlay--6.overlay(style="display: none;")
 			.overlay__modal
@@ -260,7 +260,7 @@ block content
 							.dl--segment.col-xs-12.casebook-container
 								span Improving our website
 								p Help us test if different categories in our website menu could make it easier to find the right advice
-								a.case-btn(href="https://3c6o6lhi.optimalworkshop.com/treejack/ca-treejack", target="_blank") Improve our website
+								a.case-btn(href="https://treejack-ca-nav.optimalworkshop.com/treejack/ca-treejack", target="_blank") Improve our website
 
 		#overlay--7.overlay(style="display: none;")
 			.overlay__modal
@@ -278,7 +278,7 @@ block content
 									a.case-btn(href="https://preview.uxpin.com/ac5495f97820ad2ac2dedb674b436d335fac5e73#/pages/76561523/simulate/no-panels?mode=i",target="_blank") Design 1
 
 								.col-xs-3
-									a.case-btn(href="https://projects.invisionapp.com/d/main#/console/12505169/263157318/preview",target="_blank") Design 2
+									a.case-btn(href="https://invis.io/B8EBOXZUR",target="_blank") Design 2
 								
 							
 
