[fix] adding fixes for post stylesheet bugs

--- a/libs/styles/theme/search-results.less
+++ b/libs/styles/theme/search-results.less
@@ -65,7 +65,7 @@
 
 .search-sidebar--filter {
     .well;
-    border-top: 1px @gray-6 solid;
+    //border-top: 1px @gray-6 solid;
     background-color: @white;
     //margin-bottom: 1.5rem;
     padding: 1.4rem 1rem 1rem;
