--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -169,7 +169,7 @@ input[type="search"]{
 	border-right: none;
 }
 .search-inline__button > input, .search-inline__button > button{
-	padding: .65em .6em;
+	padding: .75em .6em;
 }
 
  .callout--adviser, .dap-panel--adviser{
@@ -195,4 +195,23 @@ input[type="search"]{
     background-color: #f2f2f2;
     color: #191926;
     border: none;
+ }
+
+ .index-intro{
+	 padding-bottom: 20px;
+ }
+ .index-intro > p{
+	 margin-bottom: 0;
+ }
+ .dropdown{
+	 width: 78%;
+ }
+ .search-sidebar--filter .dropdown{
+	 width: 100%;
+ }
+ .custom-dropdown__button{
+	 margin: 0;
+ }
+ .callout--related, .dap-panel--progress{
+	 border: none;	
  }
