Feature: New global feedback form component. Add styles for a new global feedback form to sit at the bottom of the content. Additional icon added to icon system to be used in the feedback forms.

--- a/libs/styles/base/icons.less
+++ b/libs/styles/base/icons.less
@@ -344,287 +344,23 @@
     padding-right: .5rem;
 }
 
-/*
+///////////////////////////////////////////////////
+// NOTE: 2017-11-23
+// icons SHOULD be used in markup as so...
+//
+// <i class="i i--pad-r-sm i--tick" aria-hidden="true"></i>
+//
+// The `.i` class brings in the relevant font family
+// and global icon styling and the `.icon-[iconName]`
+// class uses the content property to display the
+// necessary icon.
+//
 
-    ICOMOON
-
-    For icons the current site is using https://icomoon.io/app/
-
-    # Updating
-
-    If these are modified please upload the file /Static/font/selection.json and edit, and download again
-    Copy the font declaration (you'll need to edit the eot path) and edit the icon declarations so they are in the same format as below
-
-    # Usage
-
-    The correct accessible usage is, for example
-    <button><i aria-hidden="true" class="icon-cross"></i>Button label</button>
-
-    If you don't want the label to show then use this pattern
-    <button><i aria-hidden="true" class="icon-cross icon--no-text"></i><span class="screenreader">Button label</span></button>
-
-    # Implementation note
-
-    For the icon font you need to set the font, and the icon content.  This leaves with a few choices
-
-    1. Use class="icon icon-name", using .icon for the font and .icon-name for the content
-       Result is extra HTML markup
-    2. Use class="icon-name" and use [class^="icon-"], [class*=" icon-"] for the font selector
-       Result is the use of an evil selector
-    3. Use class="icon-name" and define the font individually on the each icon-name declaration
-       Result is less HTML, but more CSS
-    4. Create your own <icon> element and declare the font on the icon selector
-       This is evil and will require extra hacks for <= IE8 to get it to work
-
-    I've gone for option 3.  See below for the LESS implementation
+// modifier classes
+//
+.i--tick:before { content: "\e601"; }
 
 
-@font-face {
-    font-family: 'icomoon';
-    src: url('../assets/fonts/icomoon.eot');
-}
-@font-face {
-    font-family: 'icomoon';
-    src: url('../assets/fonts/icomoon.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-// These can be used in other modules
-@icon-symbol-megaphone: "\261e";
-@icon-symbol-zws: "_";
-@icon-symbol-search: "\e600";
-@icon-symbol-menu: "\2630";
-@icon-symbol-down:"\25bc";
-@icon-symbol-clock: "\231a";
-@icon-symbol-key: "\e604";
-@icon-symbol-target: "\e605";
-@icon-symbol-bubble: "\e606";
-@icon-symbol-bin: "\e607";
-@icon-symbol-happy: "\263a";
-@icon-symbol-exit: "\e60a";
-@icon-symbol-google: "\e60b";
-@icon-symbol-facebook: "\e60c";
-@icon-symbol-twitter: "\e60d";
-@icon-symbol-email: "\2709";
-@icon-symbol-new-window: "\e60f";
-@icon-symbol-save: "\e610";
-@icon-symbol-load: "\e611";
-@icon-symbol-cross: "\2716";
-@icon-symbol-copy: "\e614";
-@icon-symbol-tick: "\2713";
-@icon-symbol-help: "\3f";
-@icon-symbol-undo: "\238c";
-@icon-symbol-inbox: "\e618";
-@icon-symbol-print: "\2399";
-@icon-symbol-right: "\25b6";
-@icon-symbol-guillemet-double-right: "\bb";
-@icon-symbol-guillemet-right: "\203a";
-@icon-symbol-sort: "\2195";
-@icon-symbol-sort-desc: "\2193";
-@icon-symbol-sort-asc: "\2191";
-@icon-symbol-star: "\2605";
-@icon-symbol-word: "\eadc";
-@icon-symbol-chevron-down: "\2c5";
-@icon-symbol-chevron-up: "\2c4";
-@icon-symbol-chevron-left: "\3c";
-@icon-symbol-chevron-right: "\3e";
-@icon-symbol-restart: "\e602";
-@icon-symbol-checkmark: "\e601";
-*/
-
-/*
-.icon-megaphone:before {
-    content: @i-megaphone;
-    &:extend(.icon);
-}
-
-// This one is special, it will be used to perform a JavaScript test to find out if the icons have loaded
-.icon-zws:before {
-    content: @i-zws;
-    &:extend(.icon);
-}
-
-.icon-search:before {
-    content: @i-search;
-    &:extend(.icon);
-}
-
-.icon-menu:before {
-    content: @i-menu;
-    &:extend(.icon);
-}
-
-.icon-down:before {
-    content: @i-down;
-    &:extend(.icon);
-}
-
-.icon-clock:before {
-    content: @i-clock;
-    font-size: 90%;  // Looks better if the clock doesn't extend above letters
-    &:extend(.icon);
-}
-
-.icon-key:before {
-    content: @i-key;
-    &:extend(.icon);
-}
-
-.icon-target:before {
-    content: @i-target;
-    &:extend(.icon);
-}
-
-.icon-bubble:before {
-    content: @i-bubble;
-    &:extend(.icon);
-}
-
-.icon-bin:before {
-    content: @i-bin;
-    &:extend(.icon);
-}
-
-.icon-happy:before {
-    content: @i-happy;
-    &:extend(.icon);
-}
-
-.icon-exit:before {
-    content: @i-exit;
-    &:extend(.icon);
-}
-
-.icon-google:before {
-    content: @i-google;
-    &:extend(.icon);
-}
-
-.icon-facebook:before {
-    content: @i-facebook;
-    &:extend(.icon);
-}
-
-.icon-twitter:before {
-    content: @i-twitter;
-    &:extend(.icon);
-}
-
-.icon-email:before {
-    content: @i-email;
-    &:extend(.icon);
-}
-
-.icon-new-window:before {
-    content: @i-new-window;
-    &:extend(.icon);
-}
-
-.icon-save:before {
-    content: @i-save;
-    &:extend(.icon);
-}
-
-.icon-load:before {
-    content: @i-load;
-    &:extend(.icon);
-}
-
-.icon-cross:before {
-    content: @i-cross;
-    font-size: 80%; // TODO Make smaller in the font
-    &:extend(.icon);
-}
-
-.icon-copy:before {
-    content: @i-copy;
-    &:extend(.icon);
-}
-
-.icon-tick:before {
-    content: @i-tick;
-    &:extend(.icon);
-}
-
-.icon-help:before {
-    content: @i-help;
-    &:extend(.icon);
-}
-
-.icon-undo:before {
-    content: @i-undo;
-    &:extend(.icon);
-}
-
-.icon-inbox:before {
-    content: @i-inbox;
-    &:extend(.icon);
-}
-
-.icon-print:before {
-    content: @i-print;
-    &:extend(.icon);
-}
-
-.icon-right:before {
-    content: @i-right;
-    &:extend(.icon);
-}
-
-.icon-guillemet-double-right:before {
-    content: @i-angle-double-right;
-    &:extend(.icon);
-}
-
-.icon-guillemet-right:before {
-    content: @i-angle-right;
-    &:extend(.icon);
-}
-
-.icon-sort:before {
-    content: @i-sort;
-    &:extend(.icon);
-}
-
-.icon-sort-desc:before {
-    content: @i-sort-desc;
-    &:extend(.icon);
-}
-
-.icon-sort-asc:before {
-    content: @i-sort-asc;
-    &:extend(.icon);
-}
-
-.icon-star:before {
-    content: @i-star;
-    &:extend(.icon);
-}
-
-.icon-word:before {
-    content: @i-doc-word;
-    &:extend(.icon);
-}
-
-.icon-chevron-down:before {
-    content: @i-down;
-    &:extend(.icon);
-}
-
-.icon-chevron-up:before {
-    content: @i-up;
-    &:extend(.icon);
-}
-
-.icon-chevron-left:before {
-    content: @i-left;
-    &:extend(.icon);
-}
-
-.icon-chevron-right:before {
-    content: @i-right;
-    &:extend(.icon);
-}
-*/
+// utility classes
+//
+.i--pad-r-sm { padding-right: .5em; }
