--- a/libs/styles/modules/callout.less
+++ b/libs/styles/modules/callout.less
@@ -279,3 +279,18 @@ blockquote,
         color: @text-color;
     }
 }
+
+
+/****
+ TOC Styling for well
+***/
+
+.well.tertiary{
+    background:#e7f3f5;
+}
+@media screen and (max-width: 600px) {
+	.well.tertiary .ul--2-column{
+	    -webkit-column-count: 1;
+    	column-count: 1;
+	}
+}
