[patch] adding border for callouts and fixing ssearch margin

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -213,5 +213,11 @@ input[type="search"]{
 	 margin: 0;
  }
  .callout--related, .dap-panel--progress{
-	 border: none;	
+	border-bottom: none;
+    border-left: none;
+    border-right: none;	
+ }
+
+ .search-inline__button > button{
+	margin: 0;
  }
