[patch] advisernet logo focus

--- a/libs/styles/modules/header.less
+++ b/libs/styles/modules/header.less
@@ -108,7 +108,7 @@
     }
 }
 
-.main-header .main-header__logo:hover{
+.main-header .main-header__logo:hover,.main-header .main-header__logo:focus{
     background: none;
 }
 .main-header__menu-link {
