Bug: Switch color of side-navbar heading. cms7-102

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -26,9 +26,9 @@
 	background: none;
 	outline: none;
 
-    @media(min-width: @breakpoint-content) {
-        color: #004b88;
-    }
+    // @media(min-width: @breakpoint-content) {
+    //     color: #004b88;
+    // }
 }
 
 .main-content__sidebar.side-nav .side-nav__heading a:hover{
