Bug: Increase font-size of side-nav heading when on mobile. cms7-102

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -28,6 +28,8 @@
 
     @media(max-width: @breakpoint-content) {
         color: #004b88;
+        font-size: 20px;
+        font-size: 1.25rem;
     }
 }
 
