--- a/libs/styles/modules/header.less
+++ b/libs/styles/modules/header.less
@@ -13,7 +13,7 @@
     a:hover,
     a:focus,
     a:visited {
-        background-color: @white;
+        background-color: none;
     }
 }
 @media ( max-width: @screen-xs-max ) {
@@ -250,7 +250,7 @@ input.main-header__search__input {
     &:hover,
     &:active,
     &:focus {
-        background-color: @white;
+        background-color:none;
         color: @heritage-blue;
     }
 }
