[feature] adding star for button advisernet

--- a/libs/styles/modules/references.less
+++ b/libs/styles/modules/references.less
@@ -30,7 +30,7 @@
 .ref-heading__toggle--on {
 	background: none;
 	padding-right: 0;
-	a {
+	button {
 		color: @yellow-dark;
 	    &:after {
 	        content: @i-star;
@@ -46,7 +46,7 @@
 }
 
 .ref-heading__toggle--off {
-	a {
+	button {
 		color: @blue;
 	    &:after {
 	        content: @i-star-o;
