--- a/libs/styles/components/helpers.less
+++ b/libs/styles/components/helpers.less
@@ -64,6 +64,14 @@
     }
 }
 
+.cf:before,
+.cf:after {
+    content: " ";
+    display: table;
+}
+
+.cf:after { clear: both; }
+
 .clear {
     clear: both;
 }
