--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -226,3 +226,25 @@ input[type="search"]{
     border-left: none;
     border-right: none;
  }
+
+ .ref-heading{
+	 overflow: visible;
+ }
+
+ .ref-heading__heading{
+	 float: none;
+	 width: 65%;
+	 display: inline-block;
+ }
+ .ref-heading__toggle{
+	 max-width: 30%;
+ }
+
+ .btn-secondary.btn-small{
+	 display: inline-block;
+	 font-size: 0.75rem;
+ }
+
+ .revealable__heading > .ref-heading__toggle{
+	 margin-right: 15px;
+ }
