[feature] adding anchor color on section-nav

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -116,6 +116,10 @@ ul.side-nav__ul--level2{
     & + ul li:hover { background-color: transparent; }
 }
 
+.section-nav li a:active {
+    outline: 2px solid #fcbb69;
+}
+
 .main-content__sidebar a:hover,.main-content__sidebar a:focus{
 	background: none;
 }
