Refactor: Change dropdowns from being 100% width of containing element.

--- a/libs/styles/furniture-elements.less
+++ b/libs/styles/furniture-elements.less
@@ -216,9 +216,9 @@ input[type="search"]{
  .index-intro > p{
 	 margin-bottom: 0;
  }
- .dropdown{
-	 width: 78%;
- }
+ // .dropdown{
+	//  width: 78%;
+ // }
  .search-sidebar--filter .dropdown{
 	 width: 100%;
  }
