--- a/libs/styles/components/forms.less
+++ b/libs/styles/components/forms.less
@@ -337,7 +337,7 @@ textarea.form__field {
     padding-right: 0;
     background-color: @white;
     display: inline-block;
-    width: 100%;
+    width: auto;
     //border: 2px solid @gray-6;
     &:after {
         pointer-events:none;
