Refactor [CMS7-288]: Apply 288 changes to cab-ui
Some changes were made in ticket 288 to the site-heritage.css file, these needed to be replicated in cab-ui also.

[CMS7-288]

--- a/libs/styles/modules/main-content.less
+++ b/libs/styles/modules/main-content.less
@@ -106,6 +106,12 @@
     }
 }
 
+.articleContent {
+    img:not(.content-right) {
+        height: auto;
+    }
+}
+
 
 .articleContent img {
     height: auto;
