Refactor [CMS7-288]: Refactor ArticleContent images
[CMS7-288]

--- a/libs/styles/modules/main-content.less
+++ b/libs/styles/modules/main-content.less
@@ -106,13 +106,12 @@
     }
 }
 
-.articleContent img {
-    height: auto;
-    border: 1px solid @blue-light;
-    border-radius: 2px;
-}
-
 .articleContent {
+    img {
+        border: 1px solid @blue-light;
+        border-radius: 2px;
+    }
+
     img:not(.content-right) {
         height: auto;
     }
